@@ -56,7 +56,7 @@ static void paint_enterprise_structure(
 
     rct_drawpixelinfo* dpi = &session->DPI;
 
-    if (dpi->zoom_level == 0 && imageOffset < 12 && ride->lifecycle_flags & RIDE_LIFECYCLE_ON_TRACK && vehicle != nullptr)
+    if (dpi->zoom_level <= 0 && imageOffset < 12 && ride->lifecycle_flags & RIDE_LIFECYCLE_ON_TRACK && vehicle != nullptr)
     {
         for (int32_t i = 0; i < 15; i++)
         {
